--- a/resume.css
+++ b/resume.css
@@ -87,7 +87,7 @@ h2{
     /* border: 1px solid red; */
     width: 90%;
     margin-top: -12px;
-    margin-left: -25px ;
+    /* margin-left: -25px ; */
   /* text-align: center; */
   /* text-align: start; */
 
