--- a/resume.css
+++ b/resume.css
@@ -167,6 +167,41 @@ li{
     text-transform: capitalize;
 }
 
+.li-keji{
+    /* border: 1px solid red; */
+    width: 99%;
+    font-size: 14px;
+    margin-top: 4px;
+    padding: 5px;
+    
+}
+
+.ul-keji{
+    border: 1px solid rgb(0, 60, 255);
+
+
+}
+
+.pro{
+    /* border: 1px solid red; */
+    display: flex;
+    flex-direction: column;
+    
+}
+
+.ppr-top{
+    /* border: 1px solid yellow; */
+    text-align: center;
+}
+
+.pro-head{
+    font-size: 17px;
+    width: 99%;
+    /* border: 1px solid rgb(0, 255, 76); */
+    
+
+}
+
 .sec-1, .sec-2, .sec-3{
     /* border: 1px solid green; */
     width: 99%;
